[gd_scene load_steps=4 format=3 uid="uid://bf574jc0yar5v"]

[ext_resource type="Script" path="res://Scripts/Skills/alex_skill_area.gd" id="1_vo826"]
[ext_resource type="Texture2D" uid="uid://bp4mm2qr04sfd" path="res://Assets/Images/Skills/Firerain/shadow.png" id="2_g1ymm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwtgx"]
radius = 73.9444

[node name="AlexSkillArea" type="Area2D"]
y_sort_enabled = true
scale = Vector2(0.6, 0.6)
collision_layer = 0
collision_mask = 96
script = ExtResource("1_vo826")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_nwtgx")
debug_color = Color(0, 1, 1, 0.137255)

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ExplosionArea" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_nwtgx")
debug_color = Color(0, 1, 1, 0.137255)

[node name="SpeedLowArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpeedLowArea"]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_nwtgx")
debug_color = Color(0, 1, 1, 0.137255)

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(2.96395, 2.96395)
texture = ExtResource("2_g1ymm")

[connection signal="body_entered" from="SpeedLowArea" to="." method="_on_speed_low_area_body_entered"]
